Add getMessage endpoint
